fixed gaps and added link to portfolio

--- a/style.css
+++ b/style.css
@@ -58,7 +58,7 @@ ul {
     width: 100%;
     display: flex;
     flex-direction: column;
-    gap: 0.75rem;
+    gap: 0.85rem;
 }
 
 li {
@@ -77,7 +77,7 @@ li {
     color: white;
     font-size: 14px;
     font-weight: 700;
-    padding: 0.75rem;
+    padding: 0.85rem;
     background: hsl(0, 0%, 20%);
     border-radius: 5px;
  }
